-- Code section methods (similar to Ruby code blocks);
-- Parallelized code section methods in mt;
-- Asynchronous class and future value;
-- Communication channel for tasklets;
-- Abstract interface type: interface Name{ methods };
-- Deferred code block and error handling;
-- Typed function decorators;
-- Class decorator and Apsect-Oriented Programming;
-- Enum/flag/symbol type;
-- Variant or disjoint union type: type1|type2;
-- Hash map type (colliding keys as red-black tree);
-- Explicit enumeration with keywords: array/list/map/tuple{};
-- Verbatim string syntax;
-- Customized for-in iteration;
-- Improve operator overloading (added support for type casting);
-- New technique for more efficient lookup of overloaded functions;
-- Access control on syntax macros and global consts and variables;
-- Data serialization (in aux module);
-- Support for template-like C data type;
-- Standard help system;
CHANGED:
-- Internal data storage structures;
-- Better parsing with a combination of top-down and bottom-up parsing;
-- Better handling of control branching;
-- Better handling of overloaded functions;
-- Better support for function specialization;
-- Better implementation of call stack;
-- Various improvements to the basic data types;
-- Various improvements to the garbage collector;
-- Re-implementation of exception types as C data type;
-- Moved aux, sys, math, meta and network modules from kernel to standard modules;
-- Replaced builtin functional methods with various builtin code section methods;
REMOVED:
-- Wide character string;
-- Posix like multi-threading methods;
-- Try-catch style exception handling;
-- Parameter passing by reference for basic data types;
FIX:
-- Many bugs;

================================
release dao-1.1, 2009-09-19
================================
ADDED:
 -- do{}while() statement;
 -- Tail call optimization;
 -- Built-in mathematic functions;
 -- Built-in functional methods such as map(), reduce() etc.;