@@ -1,7 +1,7 @@
 Dao Programming Language
 http://www.daovm.net
 
-Copyright (c) 2006-2013, Limin Fu
+Copyright (c) 2006-2014, Limin Fu
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification,
