@@ -89,7 +89,7 @@ TypeKeyword ::= type | any | int | float | complex | string
 
 -- Structures:
 @[code(syntax)]
-StructKeyword ::= interface | class | routine | operator
+StructKeyword ::= interface | class | routine
 @[code(syntax)]
 
 -- Storage/scoping:
@@ -632,6 +632,7 @@ Type ::= SpecialType
        | [ 'dao' '::' ] TupleType
        | [ 'dao' '::' ] RoutineType
        | { Identifier '::' } UserType
+       | ( 'var' | 'invar' ) '<' Type '>'
 @[code(syntax)]
 
 
@@ -815,7 +816,7 @@ Expression
 Expression ::= PrimaryExpression
              | LeftUnaryOperator PrimaryExpression
              | PrimaryExpression BinaryOperator PrimaryExpression
-             | (Type) Expression
+             | '(' Type ')' PrimaryExpression
              | AnonymousRoutine
 @[code(syntax)]
 
@@ -1093,7 +1094,7 @@ CodeBlockSig ::= Identifier '(' [ ParamList ] ')' '[' [ ParamList1 ] ']' [ '=>' 
 DecoratorSig ::= TypeHolder '(' Identifier '(' Identifier ')' [ ',' ParamList ] ')'
 
 RoutineDecl1 ::= 'routine' { Identifier '::' } ( RoutineSig | CodeBlockSig | DecoratorSig )
-RoutineDecl2 ::= 'operator' { Identifier '::' } OverloadableOperator ParamReturn
+RoutineDecl2 ::= 'routine' { Identifier '::' } OverloadableOperator ParamReturn
 
 RoutineDecl ::= RoutineDecl1 | RoutineDecl2
 
