@@ -19,9 +19,12 @@ ADDED:
 -- Deferred code block and error handling;
 -- Typed function decorators;
 -- Class decorator and Apsect-Oriented Programming;
+-- Invariables and invar classes;
+-- Boolean type;
 -- Enum/flag/symbol type;
 -- Variant or disjoint union type: type1|type2;
 -- Hash map type (colliding keys as red-black tree);
+-- Support for customized comparisons and hashing;
 -- Explicit enumeration with keywords: array/list/map/tuple{};
 -- Verbatim string syntax;
 -- Customized for-in iteration;
@@ -32,6 +35,7 @@ ADDED:
 -- Support for template-like C data type;
 -- Standard help system;
 CHANGED:
+-- "float" type to double precision (with "double" type removed);
 -- Internal data storage structures;
 -- Better parsing with a combination of top-down and bottom-up parsing;
 -- Better handling of control branching;
